--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ jsonpointer==3.0.0
 langchain-core==0.3.34
 langchain-google-genai==2.0.9
 langsmith==0.3.6
+mypy==1.15.0
+mypy-extensions==1.0.0
 orjson==3.10.15
 packaging==24.2
 proto-plus==1.26.0
@@ -36,6 +38,7 @@ PyYAML==6.0.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.9
+ruff==0.9.5
 sniffio==1.3.1
 tenacity==9.0.0
 tqdm==4.67.1
